force-app/main/default/objects/Quote/fields/Clone_Vital__c.field-meta.xml
<CustomField>
    <fullName>Clone_Vital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clone Vital</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>