force-app/main/default/objects/Quote/fields/Create_Vital_Statics__c.field-meta.xml
<CustomField>
    <fullName>Create_Vital_Statics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Vital Statics</label>
    <type>Checkbox</type>
</CustomField>