force-app/main/default/objects/Quote/fields/Move_Vital__c.field-meta.xml
<CustomField>
    <fullName>Move_Vital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Move Vital</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quotes (Move Vital)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>